# digital-library

./: README.md  index.html  package-lock.json  package.json  standalone-library.html
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: girl-with-books.lottie
